--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
-    
+      <meta name="google-site-verification" content="0dgMrUQSdjYm9w1N_2OzPFNQ8sx5QE8kTG0G-uhSNCQ" />
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
       
